fix pageHeading on mobile
-make pageHeading wrap under 600px device width

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@
         text-align: center;
     }
 
+    .pageHeading {
+        white-space: nowrap;
+    }
+
     main {
         width: 70%;
     }
@@ -57,7 +61,6 @@
     /* IE10+/Edge */
     user-select: none;
     /* Standard */
-    white-space: nowrap;
     margin: 0;
     padding: 0;
 }
